# deepcode-learn

./: .gitignore  README.md  generate_code.py  package-lock.json  poetry run uvicorn mainapp --reload.py
backend/: README.md  auth.py  correction.py  evaluator.py  exam.py  llm.py  main.py  problems.json  pyproject.toml  submission_handler.py  submit.py  utils.py
backend/data/: cpp_problems.json  python_problems.json
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
frontend/public/: hero.avif
frontend/public/data/: c_problems.json  clean_problems.py  cleaned_structured_problems.json  enhance_short_description.py  java_problems.json  problems2.json  reindex_problems.py  reindexed_problems.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/choose-language/: page.tsx
frontend/src/app/dashboard/professor/: page.tsx
frontend/src/app/exams/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/lib/: firebase.ts
frontend/src/app/login/: page.tsx
frontend/src/app/problems/: page.tsx
frontend/src/app/problems/[id]/: page.tsx
frontend/src/app/signup/: page.tsx
