[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "mohamed adam",email = "mohamed.adam.alimi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "transformers (>=4.53.1,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "accelerate (>=1.8.1,<2.0.0)",
    "auto-gptq (>=0.7.1,<0.8.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "firebase-admin (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
